force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>to store the student record</description>
    <label>Student</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>StudentID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>