force-app/main/default/objects/Student__c/fields/card_detain__c.field-meta.xml
<CustomField>
    <fullName>card_detain__c</fullName>
    <label>card detain</label>
    <length>12</length>
    <maskChar>asterisk</maskChar>
    <maskType>creditCard</maskType>
    <type>EncryptedText</type>
</CustomField>