force-app/main/default/objects/Student__c/fields/Math_Marks__c.field-meta.xml
<CustomField>
    <fullName>Math_Marks__c</fullName>
    <label>Math Marks</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>