force-app/main/default/objects/Student__c/fields/message__c.field-meta.xml
<CustomField>
    <fullName>message__c</fullName>
    <externalId>true</externalId>
    <label>message</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>