force-app/main/default/objects/Student__c/fields/registration_date__c.field-meta.xml
<CustomField>
    <fullName>registration_date__c</fullName>
    <label>registration date</label>
    <type>DateTime</type>
</CustomField>