force-app/main/default/objects/Student__c/fields/Science_Marks__c.field-meta.xml
<CustomField>
    <fullName>Science_Marks__c</fullName>
    <label>Science Marks</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>