force-app/main/default/objects/Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <defaultValue>&quot;ram&quot;</defaultValue>
    <description>for student</description>
    <inlineHelpText>Please add student name</inlineHelpText>
    <label>Student Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>