force-app/main/default/objects/Student__c/fields/Student_type__c.field-meta.xml
<CustomField>
    <fullName>Student_type__c</fullName>
    <formula>IF( Age__c  &gt;= 18  &amp;&amp; Age__c &lt;=25 , &apos;Fresher&apos;, IF(Age__c &gt; 25, &apos;Working Professionals&apos;, &apos;Student&apos;)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student type</label>
    <type>Text</type>
</CustomField>