force-app/main/default/objects/Student__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Stream__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
            <value>
                <fullName>history</fullName>
            </value>
            <value>
                <fullName>geographics</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Economicss</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>