force-app/main/default/objects/Student__c/fields/Total_Marks__c.field-meta.xml
<CustomField>
    <fullName>Total_Marks__c</fullName>
    <formula>Math_Marks__c  +  Science_Marks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Marks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>