force-app/main/default/objects/Student__c/validationRules/Age_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 15</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Age Should be greater than 15</errorMessage>
</ValidationRule>